--- a/05-integration-2.Rmd
+++ b/05-integration-2.Rmd
@@ -1,145 +1,211 @@
-# More Integration
 
-## More Formulas
 
-1. $\int x^rdx=\frac{x^{r+1}}{r+1}+C$
+# Integration
 
-2. $\int \sin x dx=-\cos x +C$
+Note that *an italic title* indicates an application section which is less important than a theoretical one.
 
-3. $\int \cos x dx=\sin x +C$
+It is quite surprising that differentiation and integration are related— they are *reverse process* of each other (see **Fundamental Theorem of Calculus**).
 
-4. $\int \sec^2 x dx =\tan x+C$
+## Notes on definite integrals {-}
 
-5. $\int \frac{1}{1+x^2}dx=\tan^{-1}x+C$
+**Theorem** Let $f$ be a function that is *continuous* on a *closed and bounded* interval $[a,b]$. Then the following limit exists:
+$$\underset{n\rightarrow\infty}{\lim}\sum_{i=1}^n f(x_{i-1})\cdot\frac{b-a}{n}$$
+where $x_i=a+\frac{i}{n}(b-a)$ for $0\le i\le n$.
 
-6. $\int e^xdx=e^x +C$
+**Remark** This theorem does not require the range of $f$ is positive.
 
-7. $\int \frac{1}{x}dx=\ln|x| +C$
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/area.png")
+```
 
-## Subsitution Method
+**Definition** Let $f$ be a function that is continuous on a closed and bounded interval $[a,b]$. The number $\underset{n\rightarrow\infty}{\lim}\sum_{i=1}^n f(x_{i-1})\cdot\frac{b-a}{n}$, where $x_i=a+\frac{i}{n}(b-a)$ for $0\le i\le n$, is called the **definite integral** of $f$ from $a$ to $b$ and is denoted by $\int_{a}^bf(x)dx$, that is 
+$$\int_{a}^bf(x)dx=\underset{n\rightarrow\infty}{\lim}\sum_{i=1}^n f(x_{i-1})\cdot\frac{b-a}{n}$$
 
-Let $y$ be a composition function of $F$ with $g$:
-$$y=F(g(x)).$$
-Suppose that the function $g$ is differentiable on an open interval $I$ and that the function $F$ is differentiable on an open interval containing the image of $I$ under $g$. By the chain rule, the composition function $F\circ g$ is differentiable on $I$:
-$$\frac{d}{dx}F(g(x))=\frac{dy}{dx}=\frac{dy}{d g(x)}\frac{d g(x)}{dx}=F'(g(x))g'(x),$$
+**Remark** The above definition does not require the range of $f(x)$  positive. If $f(x)$ intersect with $x$-axis, the definite integral is the difference between the area of region above $x$-axis and that below $x$-axis. 
 
-Since the integration is the reverse process of differentiation, we have 
-$$\int F'(g(x))\cdot g'(x)dx=\int f(g(x))\cdot g'(x)dx=F(g(x))+C,$$
-where $F'=f$.
+**Remark** In the notation $\int_{a}^{b}f(x)dx$  the variable $x$ is called a *dummy* variable; it can be replaced by any other symbol. For example $\int_{0}^1t^2dt=\frac{1}{3}$.
 
-**Change of variable method** Putting $u=g(x)$ and using $du=g'(x)dx$, we get
-$$\int f(g(x))g'(x)dx=\int f(u)du=F(u)+C.$$
+**Remark** More generally,the sub-intervals $[x_0,x_1],\ldots, [x_{n−1},x_n]$ need not be of equal lengths. All we need is that the lengths are small enough: if $a=x_0<x_1<···<x_n=b$ and $\Delta x_1, \ldots, \Delta x_n$ are small enough, where $\Delta x_i$ is the length of the $i$th sub-interval $[x_{i−1},x_i]$, then for every choice of $t_1,\ldots, t_n$ with $t_i\in[x_{i−1},x_i]$ for $1≤i≤n$, the sum (called a **Riemann Sum**)
+$$\sum_{i=1}^nf(t_i)\Delta x_i$$
+is close to the definite integral $\int_{a}^bf(x)dx$. That is $$\int_{a}^bf(x)dx=\underset{||\Delta x||\rightarrow 0}{\lim}{\sum_{i=1}^nf(t_i)\Delta x_i},$$
+where $||\Delta x||\rightarrow0$ means the lengths $\Delta x_i$'s tend to zero.
 
-**Remarks** The notations $du$ and $dx$ are called differentials. They are related by the fact that if $\Delta x$ is small, then $\frac{\Delta u}{\Delta x}$ is approximately equal to $g'(x)$, that is 
-$$\Delta u=g'(x)\Delta x.$$
-In the limiting situation, we have $du=g'(x)dx$.
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/area1.png")
+```
 
-**Example** Find $\int(x^2+1)^2 2x dx, \int\frac{\ln x}{x}dx, \int x^2e^{x^3}dx, \int\sin(2x-3)dx$
+**Notation** The symbol $\int$ was introduced by Leibniz and is called the **integral sign**. It is an elongated $S$ and was chosen because a deﬁnite integral is a limit of sums.
 
-**Substitution method for definite integrals**
-$$\int_a^bf(g(x))g'(x)dx=\int_{g(a)}^{g(b)}f(u)du$$
-where $g$ is a continuous function on $[a,b]$ and $f$ is a function defined and continuous on an open interval $I$ containing the image of $[a,b]$ under $g$.
+**Example** The result in \@ref(eq:area) can be written as 
+$\int_{0}^1x^2dx=\frac{1}{3}$
 
-**Example** Evaluate $\int_0^4x\sqrt{x^2+9}dx, \int_0^1(x+1)e^{x^2+2x}dx, \int_0^{\frac{\pi}{2}}\sin x\cos xdx$
+**Example** Use the definition to find $\int_1^2xdx$.
 
-**Example** Find the area of the region that lies between the $x$-axis and the graph of $y=xe^{-x^2}$ for $-1\le x\le 2$.
+**Rules for Definite Integrals** Let $f$ and $g$ be functions that are continuous on a closed and bounded interval $[a,b]$. Let $\alpha$ be a constant and let $c\in(a;b)$. Then we have
 
-## Integration of Rational Functions
+1. $\int_a^b[f(x)+g(x)]dx=\int_a^bf(x)dx+\int_a^bg(x)dx$
 
-$$\int \frac{A}{ax+b}dx\\=A\int\frac{1}{ax+b}dx\\=A\cdot\frac{1}{a}\cdot\ln|ax+b|+C$$
-We consider three cases when integrate 
-$$\frac{Ax+B}{ax^2+bx+c}$$
+2. $\int_a^b\alpha f(x)dx=\alpha\int_a^b f(x)dx$
 
-**Case 1** $b^2-4ac>0$
+3. $\int_a^b f(x)dx=\int_a^c f(x)dx+\int_c^b f(x)dx$
 
-The denominator can be factorized as $a(x-x_1)(x-x_2)$. Moreover, there exists contants $\alpha, \beta$ such that 
-$$\frac{Ax+B}{ax^2+bx+c}=\frac{\alpha}{x-x_1}+\frac{\beta}{x-x_2}$$
-The above process is called **partial-fraction decomposition** of the rational function.
+**Convention** Let $f$ be a function that is continuous on a closed and bounded interval $[a,b]$ and let $c\in(a,b)$. Then we have
 
-**Example** Find $\int\frac{x+1}{x^2-2x-3}dx$.
+1. $\int_b^af(x)dx=-\int_a^bf(x)dx$
 
-**Case 2** $b^2-4ac=0$.
+2. $\int_c^cf(x)dx=0$
 
-The denominator can be factorized as $a(x-x_1)^2$. Moreover, there exists contants $\alpha, \beta$ such that 
-$$\frac{Ax+B}{ax^2+bx+c}=\frac{\alpha}{x-x_1}+\frac{\beta}{(x-x_1)^2}.$$
+**Terminology** In a definite integral $\int_a^bf(x)dx$,
 
-**Example** Find $\int\frac{2x+3}{x^2-2x+1}dx$
+- The function $f$ is called the **integrand**.
 
-**Case 3** $b^2-4ac<0$
+- The numbers $a$ and $b$ are called the **limits of integration**.
 
-The denominator can be written as $a((x+s)^2+t^2)$
+## Fundamental theorem of calculus {-}
 
-**Subcase 3a** $A=0$
-$$\int\frac{Ax+B}{ax^2+bx+c}dx=\frac{B}{at}\tan^{-1}\frac{x+s}{t} +C$$
+**Fundamental Theorem of Calculus V1** Let $f$ be a function that is continuous on a closed and bounded interval $[a,b]$. Let $F$ be the function from $[a,b]$ into $\mathbb{R}$ defined by
+$$F(x)=\int_a^xf(t)dt ~~~ for ~~ a\leq t \leq b.$$
 
-**Subcase 3b** $Ax+B=k(2ax+b)$
-$$\int\frac{Ax+B}{ax^2+bx+c}dx=\int\frac{k(2ax+b)}{ax^2+bx+c}$$
-which can be integrated using substitution $u=ax^2+bx+c$.
+Then $F$ is continuous on $[a,b]$ and differentiable on $(a,b)$ with $F'(x)=f(x)$ for all $x\in(a,b)$.
 
-**Case 3 in general** We rewrite the numerator as a sum of two terms: the first one is a multiple of the derivative of the denominator and the second one is a constant.
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/Fx.png")
+```
 
-**Example** Find $\int\frac{2x+3}{x^2+4x+13}dx$
+*Explanation* We have $F'(x)=\underset{h\rightarrow 0}{\lim}\frac{F(x+h)-F(x)}{h}$
 
-## Integration by Parts
+For $x\in(a,b)$ and for sufficiently small $h>0$ such that $a+h\leq b$, we have 
+\begin{align}
+F(x+h)-F(x) &= \int_a^{x+h}f(t)dt-\int_a^xf(t)dt\\
+&= \left(\int_a^xf(t)dt+\int_x^{x+h}f(t)dt\right)-\int_a^xf(t)dt\\
+&=\int_x^{x+h}f(t)dt
+\end{align}
+Note that $\int_x^{x+h}f(t)dt$ is the area of the region below the graph of $f$ from $x$ to $x+h$. 
 
-The technique in integration that corresponds to the product rule in differentiation is called **integration by parts**.
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/areaf.png")
+```
 
-Let $f$ and $g$ be functions that are differentiable on an open interval $(a, b)$. By the product rule, we have 
-$$\frac{d}{dx}\left( f(x)g(x) \right)=f'(x)g(x)+f(x)g'(x), ~~ a<x<b,$$
-which, written in terms of integration,  becomes 
-$$\int f'(x)g(x)dx + \int f(x)g'(x)dx =f(x)g(x), ~~ a<x<b. $$
+If $h$ is small, then the area of the small region under consideration can be approximated by the area of the rectangular region with base $[x,x+h]$ on the horizontal axis and height equal to $f(x)$. Thus we have 
+$\int_{x}^{x+h}f(t)dt$
+is close to $f(x)\cdot h$ if $h$ is small, from which we obtain
+$$\frac{F(x+h)-F(x)}{h}=\frac{\int_x^{x+h}f(t)dt}{h}$$
+is close to $f(x)$ if $h$ is small. Taking limit, we get $F'(x)=f(x)$.
 
-Or we have 
-$$\int f(x)g'(x)dx = f(x)g(x) - \int f'(x)g(x)dx, ~~ a<x<b,$$
-in which $\int f'(x)g(x)dx$ is easier to find than $\int f(x)g'(x)dx$.
+**Remark** To find the definite integral $\int_a^bf(x)dx$, we should look for functions $G$ such that $G'=f$.
 
-**Example** Find $\int xe^xdx, \int x\cos xdx, \int \ln x dx$.
+**Definition** Let $f$ be a function that is continuous on a closed and bounded interval $[a,b]$. Suppose that $G$ is a function that is defined on $[a,b]$ such that the following two conditions are satisfied:
 
-## More Applications of Definite Integrals
+1. $G$ is continuous on $[a,b]$;
 
-**Consumers' and Producer's surplus**
+2. $G$ is differentiable on $(a,b)$ and $G'(x)=f(x)$ for all $x\in(a,b)$.
 
-**Probability**
+Then we say that $G$ is a **primitive** for $f$ on $[a,b]$.
 
-**Definition** A variable whose values depend on the outcome of a random process is called a random variable.
+**Example** $G(x)=x^3$ is a primitive for $f(x)=3x^2$.
 
-**Example**
+**Theorem** Let $F$ and $G$ be functions that are defined on a closed and bounded interval $[a,b]$. Suppose that they are continuous on $[a,b]$ and are differentiable on $(a,b)$ with $F'(x)=G'(x)$ for all $x\in(a,b)$. Then on $[a,b]$, the functions $F$ and $G$ differ by a constant, that is, there exists a constant $C$ such that
+$$F(x)-G(x)=C$$
+for all $x\in[a,b]$.
 
-1. Suppose a die is rolled and $X_1$ is the number that turns up. *Discrete random variable*
+*Explanation* $F'(x)=G'(x)$ for all $x\in(a,b)$ indicates that at corresponding points (same $x$-coordinates) tangents to the graphs of $F$ and $G$ are parallel. Hence, the graph of $F$ can be obtained from that of $G$ by moving it upward ($C>0$) or downward ($C<0$).
 
-2. The life (in months) of a certain computer part. *Continuous random variable*
+**Corollary** Let $f$ be a function that is continuous on a closed and bounded interval $[a,b]$. Suppose that $F$ and $G$ are *primitives* for $f$ on $[a,b]$. Then on $[a,b]$, the functions $F$ and $G$ differ by a constant.
 
-**Definition** Let $X$ be a discrete random variable with values in $\{x_1,x_2,\ldots,x_n\}$. A **probability function** of $X$ is a function $f$ with domain $\{x_1,x_2,\ldots,x_n\}$ such that 
+**Example** Find the value of the definite integral $\int_1^23x^2dx$.
 
-1. $0\le f(x_i)$ for all $i=1,\ldots,n$;
+**Fundamental Theorem of Calculus V2** Let $f$ be a function that is continuous on a closed and bounded interval $[a,b]$. Suppose $G$ is a primitive for $f$ on $[a,b]$. Then we have 
+$$\int_a^bf(x)dx=G(b)-G(a)$$
+ 
+*Proof* Let $F$ be the function from $[a,b]$ into $\mathbb{R}$ defined by $$F(x)=\int_a^xf(t)dt, ~~~ a\le x\le b.$$
+By V1, the function $F$ is a primitive for $f$ on $[a,b]$. Hence, by the Corollary, there exists a constant $C$ such that $$F(x)-G(x)=C ~~~~ \text{for all }~~x\in[a,b].$$
+Therefore, we have 
+\begin{align}
+\int_a^bf(x)dx=&F(b)\\
+=&F(b)-F(a)\\
+=&(G(b)+C)-(G(a)+C)\\
+=&G(b)-G(a)
+\end{align}
+ 
+**Example** Find the value of the definite integral $\int_1^23x^2dx$.
 
-2. $f(x_1)+\cdots+f(x_n)=1$.
+**Notation** $G(b)-G(a)=\left[G(x)\right]_a^b=G(x)|_a^b$
 
-**Probabilities of Events for Discrete Random Variables** Suppose that $X$ is a discrete random variable with values in the set $\{x_1,\ldots,x_n\}$ and that $f$ is a probability function of $X$.
 
-- An *event* for $X$ is a subset of $\{x_1,\ldots,x_n\}$.
+**Example: Area under Graph of Function** Find the area of the region that is bounded by the curve $y=\sqrt{x}$, the line $x=1$ and the $x$-axis.
 
-- The probability of an event $E$, denoted by $P(E)$, is the number given by 
-$$P(E)=\sum_{x_i\in E}f(x_i).$$
+**Example: Area between Graphs of Functions** Find the area of the region bounded by the parabola $y=x^2$ and the line $y=x+2$.
 
-**Definition** Let $X$ be a *continuous* random variable in $[a,\infty)$. A **probability function** of $X$ is a function $f$ with domain $[a,\infty)$ such that 
+**Fundamental Theorem of Calculus V3** Let $f$ be a function such that $f'$ is continuous on an open interval $(a,b)$. Then for every $x_0\in(a,b)$, we have 
+$$f(x)=\int_{x_0}^xf'(t)dt+f(x_0)$$
+for all $x\in(a,b)$.
 
-1. $0\le f(x_i)$ for all $x\in[a,\infty)$;
+**Example** Find the cost function if the marginal cost is $3+40x-5x^2$ and the fixed cost is $45$.
 
-2. $\int_a^\infty f(x)dx=1$.
+**Theorem** Let $f$ be a function such that $f'$ is continuous on an open interval $(a,b)$. Then for every pair of number $x_0,x_1$ in $(a,b)$, we have $$\int_{x_0}^{x_1}f'(t)dt=f(x_1)-f(x_0).$$
 
-**Remark** $\int_a^\infty f(x)dx$ is called an *improper integral* and is defined by 
-$$\int_a^\infty f(x)dx=\underset{R\rightarrow\infty}{\lim}\int_0^Rf(x)dx,$$
-provided that the limit exists.
+**Example** A particle moves along a line so that its velocity at time $t$ is $v(t)=t^2-t$ meters per second. Find the displacement of the particle during the time period $1\leq t\leq 2.$
 
-**Example** Find $\int_1^\infty \frac{1}{x^2}dx$.
+## Notes on indefinite integrals {-}
 
-**Probabilities of Events for Continuous Random Variables** Suppose that $X$ is a continuous random variable with values in the interval $(a,\infty]$ and that $f$ is a probability function of $X$.
+**Definition** Let $f$ be a function that is continuous on an open interval $(a,b)$. Suppose $F$ is a function defined on $(a,b)$ such that $F'(x)=f(x)$ for all $x\in(a,b)$. Then we say $F$ is an **antiderivative** for $f$ on $(a,b)$.
 
-- An *event* for $X$ is usually an interval contained in $[a,\infty)$; such events are represented by $(\alpha\le X\le \beta)$.
+**Example** $f(x)=\frac{1}{\sqrt{x}}$, and $F(x)=2\sqrt{x}$. We have $F'(x)=f(x)$ for all $x\in(0,\infty)$. Thus $G$ is an *antiderivative* for $g$ on every open interval contained in $(0,\infty)$.
 
-- The probability of an event $(\alpha\le X\le\beta)$, denoted by $P(\alpha\le X\le\beta)$, is the number given by 
-$$P(\alpha\le X\le\beta)=\int_\alpha^\beta f(x)dx.$$
+**Theorem** Let $f$ be a function that is continuous on an open interval $(a,b)$. Suppose that $F$ and $G$ are *antiderivatives* for $f$ on $(a,b)$. Then on $(a,b)$, the functions $F$ and $G$ differ by a constant.
 
-**Remark** It does not matter whether we include the endpoints $\alpha,\beta$. For a continuous random variable $X$, the probability that $X$ equals a specific value is $0$.
+**Remark** If we can find one *antiderivative* for a continuous function $f$ on an open interval $(a,b)$, then we can find all. That is, if $F$ is an antiderivative for $f$ on $(a,b)$, then all the antiderivatives for $f$ on $(a,b)$ are in the form $$F(x)+C,~~~,a\leq x \leq b$$ where $C$ is a constant.
+
+**Definition** We call the family of all antiderivatives for $f$ on $(a,b)$  to be **the indefinite integral** of $f$ (w.r.t. $x$) and we denote it by $\int f(x)dx$. That is, $$\int f(x)dx=F(x)+C, ~~~~ a< x< b$$
+where $F$ is a function such that $F'(x)=f(x)$ for all $x\in(a,b)$ (i.e., $F$ is an antiderivative of $f$ on $(a,b)$) and $C$ is an arbitrary constant, called **constant of integration**.
+
+**Power Rule for Integration** Let $n$ be a positive integer. Then we have $$\int x^ndx=\frac{x^{n+1}}{n+1}+C, ~~~~, -\infty<x<\infty.$$
+
+## Indefinite integration
+
+**Integration**  In calculus, the inverse of differentiation is called integration.
+
+**Integral** In general, if $F′(x) = f(x)$, then $F(x)$ is said to be the **integral (sometimes called the anti-derivative or primitive)** of $f(x)$ and is written $$F(x)=\int f(x)dx.$$
+
+**Constant of integration** In general, if $F(x)$ is any function that differentiates to $f(x)$, then so does $F(x) + c$. The arbitrary constant, $c$, is called the *constant of integration*. 
+
+## Definite integration
+
+**Definite integral** In general, the definite integral
+$$\int_{a}^b f(x)dx$$ denotes the *area* under the graph of $f(x)$ between $x = a$ and $x = b$. The
+numbers $a$ and $b$ are called the **limits of integration**.
+
+
+
+## Application
+
+**Area under a curve** Find the area of the region that lies under the curve $y=x^2$ and above the $x$-axis for $x$ between $0$ and $1$.
+
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/area0.png")
+```
+
+- First we divide the interval $[0,1]$ into finitely many sub-intervals of equal lengths:
+  $$\left[0,\frac{1}{n}\right],\left[\frac{1}{n},\frac{2}{n}\right],\ldots,\left[\frac{n-1}{n},1\right].$$
+  
+- For each sub-interval $\left[\frac{i-1}{n},\frac{i}{n}\right]$, we consider the rectangular region with base on the sub-interval and height $\left(\frac{i-1}{n}\right)^2$.
+The sum of the area of these rectangular regions is *smaller* than that of the required region.
+
+\begin{align}
+S_n&=\frac{1}{n}\cdot 0^2 + \frac{1}{n}\cdot\left(\frac{1}{n}\right)^2+\cdots+\frac{1}{n}\cdot\left(\frac{n-1}{n}\right)^2\\
+&=\frac{1^2+2^2+\ldots,(n-1)^2}{n}\\
+&=\frac{n(n-1)(2n-1)}{6n^3}\\
+&=\frac{1}{3}-\frac{1}{2n}+\frac{1}{6n^2} (\#eq:area)
+\end{align}
+
+- If $n$ is very large, the error is very small and we get a good approximation for the required area. It is clear that if $n$ is very large (so that the error is small), $S_n$ is very close to $\frac{1}{3}$.
+
+
+
+
 
