--- a/06-More-functions.Rmd
+++ b/06-More-functions.Rmd
@@ -1,6 +1,6 @@
 # More Functions
 
-## Trigonometric Functions {-}
+## Trigonometric Functions 
 
 **Notation** Consider an angle $\theta$ in standard position. Let $P$ be the point of intersection of the terminal side and the unit circle. We define sine and cosine functions from $\mathbb{R}$ to $\mathbb{R}$:
 
@@ -75,7 +75,7 @@ $$\frac{d}{dx}\cos x=-\sin x$$
 **Derivative of tangent** The tangent function is differentiable on its domain and its derivative is the square of the secant function, that is,
 $$\frac{d}{dx}\tan x=\sec^2 x,~~~x\neq\pm\frac{\pi}{2},\pm\frac{3\pi}{2},\ldots.$$
 
-## Exponential functions {-}
+## Exponential functions 
 
 **Euler number** $e=\underset{m\rightarrow\infty}{\lim}\left(1+\frac{1}{m}\right)^m$
 
@@ -83,7 +83,7 @@ $$\frac{d}{dx}\tan x=\sec^2 x,~~~x\neq\pm\frac{\pi}{2},\pm\frac{3\pi}{2},\ldots.
 
 **The derivative of the exponential function** If $f(x)=e^x$ then $f'(x)=e^x$. If $f(x)=c^x$ then $f'(x)=c^x\ln c$.
 
-## Logarithmic functions {-}
+## Logarithmic functions 
 
 **Natural logarithm** A logarithm to base $e$. IF $M=e^n$ then n is the natural logarithm of $M$, and we write $n=\ln M$.
 
@@ -91,9 +91,9 @@ $$\frac{d}{dx}\tan x=\sec^2 x,~~~x\neq\pm\frac{\pi}{2},\pm\frac{3\pi}{2},\ldots.
 
 
 
-# Applications
+## Applications
 
-## Compound interest {-}
+### Compound interest 
 
 **Simple interest** The interest which is paid directly to the investor instead of being added to the original amount.
 $$S=P\times(1+rt)$$
